# DREAM_lambda_benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
benchmark/config/: test_config.yaml
benchmark/workflow/: Snakefile
benchmark/workflow/envs/: python.yaml
benchmark/workflow/rules/: benchmark.smk  iota.smk  lambda.smk  simulate.smk  simulate2.smk  valik.smk
benchmark/workflow/scripts/: clean_result_dir.sh  clean_result_dir_er.sh  compare_iota_groundtruth.py  compare_iota_lambda.py  compare_lambda_groundtruth.py  create_bin_list.py  distribute_matches.sh  distribute_matches_prot.sh  insert_matches.sh  iota_summary.py  lambda_index.sh  lambda_indexn.sh  lambda_indexp.sh  lambda_search.sh  lambda_searchn.sh  lambda_searchp.sh  lambda_summary.py  remove_linebreaks.py  run_iota_blastN.sh  run_iota_nuc.sh  run_iota_prot.sh  run_iota_tBlastN.sh  simulate_matches.sh  simulate_queries.sh  simulate_refs.sh  simulate_seq.sh  split_into_bins.py  translate_ref.sh  valik_build.sh  valik_search.sh
lib/lambda_data_simulation/: CMakeLists.txt
lib/lambda_data_simulation/src/: CMakeLists.txt  generate_query_matches.cpp
src/: CMakeLists.txt  distribute_matches.cpp  distribute_matches_prot.cpp  generate_query_matches.cpp  insert_query_matches.cpp  translate_ref.cpp
